--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "handlebars.moment": "^1.0.4",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0"
   }
 }
